--- a/package.json
+++ b/package.json
@@ -1,20 +1,41 @@
 {
-  "name": "qr-attendance-backend",
+  "name": "mobile-attendance",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.0"
+    "expo": "~51.0.0",
+    "expo-camera": "~14.1.0",
+    "expo-font": "~12.0.0",
+    "expo-linking": "~6.0.0",
+    "expo-splash-screen": "~0.27.0",
+    "expo-status-bar": "~1.12.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.14.1",
+    "react-native-reanimated": "~3.10.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "~3.31.1",
+    "react-navigation": "^5.9.8",
+    "react-navigation-native": "^5.8.10",
+    "react-navigation-tabs": "^5.11.11",
+    "@react-navigation/native": "^6.0.0",
+    "@react-navigation/native-stack": "^6.0.0",
+    "@react-navigation/bottom-tabs": "^6.0.0",
+    "@supabase/supabase-js": "^2.33.2",
+    "expo-sqlite": "~14.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
-  }
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.0",
+    "@types/react-dom": "~18.2.0",
+    "typescript": "^5.1.3"
+  },
+  "private": true
 }
